include(GNUInstallDirs)

set(TA_BINARY 1682dada-20de-4b02-9eaa-284776931233)
set(TA_FILE ${TA_BINARY}.ta)

set(TA_CMD make -C ${CMAKE_CURRENT_SOURCE_DIR}
		BINARY=${TA_BINARY}
		TA_DEV_KIT_DIR=${TA_DEV_KIT_DIR}
		CROSS_COMPILE=${CROSS_COMPILE}
		CFG_TEE_TA_LOG_LEVEL=${VERBOSE}
		SYSROOT=${TEEC_ROOT}
		O=${CMAKE_CURRENT_BINARY_DIR}
		LIBDEPS_DIR=${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR}
		LIBDEPS_INC=${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_INCLUDEDIR})

get_filename_component(DIR_NAME ${CMAKE_CURRENT_LIST_DIR} NAME)

add_custom_target(${TA_FILE}
	COMMAND ${TA_CMD}
	DEPENDS libsmw_ta
	COMMENT "Build ${DIR_NAME} ==> ${TA_FILE}")

add_dependencies(${PROJECT_NAME} ${TA_FILE})

# Add TA Build directory in the clean list
set_property(DIRECTORY APPEND PROPERTY
             ADDITIONAL_MAKE_CLEAN_FILES ${CMAKE_CURRENT_BINARY_DIR})

# Install TA with parent project install target
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${TA_FILE}
	DESTINATION ${DESTDIR}/${CMAKE_INSTALL_LIBDIR}/optee_armtz
	EXCLUDE_FROM_ALL
	COMPONENT ${PROJECT_NAME})
